Implementação do EntityFramework.

--- a/ProjetoWEB/Views/Home/Index.cshtml
+++ b/ProjetoWEB/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjetoWEB.Models.ViewModels.HomeViewModels
+﻿@model ProjetoWEB.Models.ViewModels.CadastroViewModels
 @{
     ViewBag.Title = "Cadastro";
 }
